--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
     "scripts": {
-        "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+        "prettify": "prettier --check './ts/sdk/src/**/*.ts' './tests/**.ts'",
+        "prettify:fix": "prettier --write './ts/sdk/src/**/*.ts' './tests/**.ts'",
+        "lint": "eslint . --ext ts --quiet",
+        "lint:fix": "eslint . --ext ts --fix",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "chai": "^4.3.4",
@@ -10,11 +13,17 @@
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
-        "typescript": "^4.3.5",
+        "typescript": "^4.5.4",
         "prettier": "^2.6.2",
         "@coral-xyz/anchor": "^0.26.0",
         "@solana/web3.js": "1.73.2",
-        "@drift-labs/sdk": "2.31.0-beta.2"
+        "@drift-labs/sdk": "2.31.0-beta.2",
+        "husky": "^8.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.28.0",
+        "@typescript-eslint/parser": "^4.28.0",
+        "eslint": "^7.29.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0"
     },
     "engines": {
         "node": ">=16"
