--- a/programs/drift_vaults/Cargo.toml
+++ b/programs/drift_vaults/Cargo.toml
@@ -17,3 +17,4 @@ default = []
 anchor-lang = { git = "https://github.com/drift-labs/anchor.git", rev = "ed950fe", version = "0.26.0" }
 drift = { git = "https://github.com/drift-labs/protocol-v2.git", features = ["cpi", "mainnet-beta"] }
 bytemuck = { version = "1.4.0" }
+static_assertions = "1.1.0"
