--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "lint": "eslint . --ext ts --quiet",
         "lint:fix": "eslint . --ext ts --fix",
         "prepare": "husky install",
-        "update-types": "cp target/types/drift_vaults.ts ts/sdk/src/types/drift_vaults.ts",
+        "update-types": "cp target/types/drift_vaults.ts ts/sdk/src/types/drift_vaults.ts && prettier --write ts/sdk/src/types/drift_vaults.ts",
         "anchor-tests": "yarn update-types && yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
     },
     "devDependencies": {
