add calculate_net_usd_value logic

--- a/programs/drift_vaults/Cargo.toml
+++ b/programs/drift_vaults/Cargo.toml
@@ -16,6 +16,6 @@ default = []
 [dependencies]
 anchor-lang = { git = "https://github.com/drift-labs/anchor.git", rev = "ed950fe", version = "0.26.0" }
 anchor-spl = { git = "https://github.com/drift-labs/anchor.git", rev = "ed950fe", version = "0.26.0" }
-drift = { git = "https://github.com/drift-labs/protocol-v2.git", features = ["cpi", "mainnet-beta"] }
+drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "28d63e1", features = ["cpi", "mainnet-beta"]}
 bytemuck = { version = "1.4.0" }
 static_assertions = "1.1.0"
