--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "lint:fix": "eslint . --ext ts --fix",
         "prepare": "husky install",
         "update-types": "cp target/types/drift_vaults.ts ts/sdk/src/types/drift_vaults.ts && prettier --write ts/sdk/src/types/drift_vaults.ts",
-        "anchor-tests": "yarn update-types && yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+        "update-idl": "cp target/idl/drift_vaults.json ts/sdk/src/idl/drift_vaults.json",
+        "anchor-tests": "yarn update-types && yarn update-idl && yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
     },
     "devDependencies": {
         "chai": "^4.3.4",
