--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -3,10 +3,17 @@
   "version": "0.1.0",
   "dependencies": {
     "@coral-xyz/anchor": "^0.26.0",
+    "@drift-labs/sdk": "2.31.0-beta.2",
     "@solana/web3.js": "1.73.2",
-    "@drift-labs/sdk": "2.31.0-beta.2"
+    "commander": "^11.0.0",
+    "dotenv": "^16.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=16"
+  },
+  "scripts": {
+    "cli": "ts-node cli/cli.ts"
   }
 }
