--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -1,9 +1,16 @@
 {
   "name": "@drift-labs/vaults-sdk",
   "version": "0.1.0",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "directories": {
+    "lib": "lib"
+  },
+  "peerDependencies": {
+    "@drift-labs/sdk": "^2.35.1-beta.0"
+  },
   "dependencies": {
     "@coral-xyz/anchor": "^0.26.0",
-    "@drift-labs/sdk": "2.31.0-beta.2",
     "@solana/web3.js": "1.73.2",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
@@ -14,6 +21,8 @@
     "node": ">=16"
   },
   "scripts": {
-    "cli": "ts-node cli/cli.ts"
+    "cli": "ts-node cli/cli.ts",
+    "clean": "rm -rf lib",
+    "build": "yarn clean && tsc"
   }
 }
