--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -14,6 +14,7 @@
     "@solana/web3.js": "1.73.2",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
+    "strict-event-emitter-types": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
