--- a/.github/workflows/on-sdk-update.yml
+++ b/.github/workflows/on-sdk-update.yml
@@ -35,5 +35,5 @@ jobs:
         git config user.name "GitHub Actions"
         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
         git add -A 
-        git commit --allow-empty -m "Bumping sdk dependency to ${{ github.event.client_payload.version }}"
+        git commit --allow-empty -m "Bumping sdk dependency to ${{ github.event.client_payload.version }}" --no-verify
         git push
