--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "devDependencies": {
         "@coral-xyz/anchor": "^0.26.0",
+        "@drift-labs/competitions-sdk": "0.2.0",
         "@drift-labs/sdk": "2.43.0-beta.2",
         "@solana/web3.js": "1.73.2",
         "@types/bn.js": "^5.1.0",
