--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ defaults:
 
 env:
   CARGO_TERM_COLOR: always
-  RUST_TOOLCHAIN: 1.60.0
-  SOLANA_VERSION: '1.13.7'
+  RUST_TOOLCHAIN: 1.67.0
+  SOLANA_VERSION: "1.14.16"
 
 jobs:
   fmt-clippy:
@@ -59,8 +59,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
       - name: Install yarn
         run: yarn
       - name: Run prettier
@@ -72,8 +72,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
       - name: Install yarn
         run: yarn
       - name: Run lint
@@ -82,7 +82,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout main
+        uses: actions/checkout@v3
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
@@ -93,7 +94,7 @@ jobs:
       - name: Cache build artefacts
         uses: Swatinem/rust-cache@v1
         with:
-          cache-on-failure: 'true'
+          cache-on-failure: "true"
 
       - uses: ./.github/actions/setup-solana/
 
@@ -103,8 +104,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "16.x"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Setup yarn
         run: npm install -g yarn
@@ -121,7 +122,10 @@ jobs:
           npm install --global mocha
 
       - name: build sdk
-        run: cd ts/sdk/ && yarn && tsc && cd ../..
+        run: |
+          yarn
+          tsc
+        working-directory: ts/sdk
 
       - name: run anchor tests
         run: anchor test
