--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -6,10 +6,8 @@
   "directories": {
     "lib": "lib"
   },
-  "peerDependencies": {
-    "@drift-labs/sdk": "2.43.0-beta.2"
-  },
   "dependencies": {
+    "@drift-labs/sdk": "2.43.0-beta.2",
     "@coral-xyz/anchor": "^0.26.0",
     "@solana/web3.js": "1.73.2",
     "commander": "^11.0.0",
