--- a/.github/workflows/on-sdk-update.yml
+++ b/.github/workflows/on-sdk-update.yml
@@ -55,6 +55,7 @@ jobs:
         id: publish-vaults-sdk
         run: |
           VERSION=$(node -e "console.log(require('./ts/sdk/package.json').version);")
+          rustc --version
           git config user.name "GitHub Actions"
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add -A
