--- a/.github/workflows/on-sdk-update.yml
+++ b/.github/workflows/on-sdk-update.yml
@@ -6,6 +6,11 @@ on:
   repository_dispatch:
     types: [competitions-sdk-update]
 
+env:
+  CARGO_TERM_COLOR: always
+  RUST_TOOLCHAIN: 1.67.0
+  SOLANA_VERSION: "1.14.16"
+
 jobs:
   update-sdk:
     runs-on: ubuntu-latest
@@ -51,11 +56,20 @@ jobs:
         run: npm version patch
         working-directory: ts/sdk
 
+      - name: Check Rust version
+        run: rustc --version
+
+      - name: Install Rust nightly
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ env.RUST_TOOLCHAIN }}
+          profile: minimal
+          override: true
+
       - name: Commit and push changes
         id: publish-vaults-sdk
         run: |
           VERSION=$(node -e "console.log(require('./ts/sdk/package.json').version);")
-          rustc --version
           git config user.name "GitHub Actions"
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add -A
