add missing rustfmt and clippy

--- a/.github/workflows/on-sdk-update.yml
+++ b/.github/workflows/on-sdk-update.yml
@@ -65,6 +65,7 @@ jobs:
           toolchain: ${{ env.RUST_TOOLCHAIN }}
           profile: minimal
           override: true
+          components: rustfmt, clippy
 
       - name: Commit and push changes
         id: publish-vaults-sdk
