--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.26.0",
+    "@drift-labs/competitions-sdk": "^0.2.5",
     "@drift-labs/sdk": "2.43.0-beta.5",
     "@solana/web3.js": "1.73.2",
     "commander": "^11.0.0",
