--- a/ts/sdk/tsconfig.json
+++ b/ts/sdk/tsconfig.json
@@ -6,8 +6,14 @@
 		"declaration": true,
 		"outDir": "./lib",
 		"resolveJsonModule": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"strict": true
 	},
-	"include": ["src"],
-	"exclude": ["node_modules", "tests"]
+	"include": [
+		"src"
+	],
+	"exclude": [
+		"node_modules",
+		"tests"
+	]
 }
