--- a/ts/sdk/tsconfig.json
+++ b/ts/sdk/tsconfig.json
@@ -5,12 +5,16 @@
 		"esModuleInterop": true,
 		"declaration": true,
 		"outDir": "./lib",
+		"rootDirs": [
+			"src",
+			"cli"
+		],
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"strict": true
 	},
 	"include": [
-		"src"
+		"src/**/*"
 	],
 	"exclude": [
 		"node_modules",
