--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.26.0",
-    "@drift-labs/competitions-sdk": "^0.2.5",
-    "@drift-labs/sdk": "2.49.0-beta.9",
+    "@drift-labs/competitions-sdk": "0.2.73",
+    "@drift-labs/sdk": "2.49.0-beta.10",
     "@solana/web3.js": "1.73.2",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
