--- a/.github/workflows/on-sdk-update.yml
+++ b/.github/workflows/on-sdk-update.yml
@@ -76,9 +76,24 @@ jobs:
           git add -A
           git commit --allow-empty -m "Bumping sdk and competitions-sdk dependencies to $DRIFT_SDK_VERSION and $COMPETITIONS_SDK_VERSION"
           git push
+          echo "VAULT_VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Publish to npm
         run: npm publish --access=public
         working-directory: ts/sdk
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Emit dispatch event
+        run: |
+          curl -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: token ${{ secrets.GH_PAT }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "${{ REPO_DISPATCH_URL }}" \
+            -d "{\"event_type\": \"jit-sdk-update\", \"client_payload\": {
+              \"sdk-version\": \"$SDK_VERSION\",
+              \"vault-version\": \"$VAULT_VERSION\"
+            }}"
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
