.github: add verifiable build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,3 +129,24 @@ jobs:
 
       - name: run anchor tests
         run: anchor test
+  verified-build:
+    name: Build Verifiable Artifact
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Solana Verify
+        run: |
+          cargo install solana-verify
+          solana-verify --version
+
+      - name: Verifiable Build
+        run: |
+          solana-verify build --library-name drift_competitions
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: target/deploy/drift_vaults.so
