--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,7 +143,7 @@ jobs:
 
       - name: Verifiable Build
         run: |
-          solana-verify build --library-name drift_competitions
+          solana-verify build --library-name drift_vaults
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
