--- a/.github/workflows/on-sdk-update.yml
+++ b/.github/workflows/on-sdk-update.yml
@@ -73,6 +73,7 @@ jobs:
           VERSION=$(node -e "console.log(require('./ts/sdk/package.json').version);")
           git config user.name "GitHub Actions"
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          yarn run prettify:fix
           git add -A
           git commit --allow-empty -m "Bumping sdk and competitions-sdk dependencies to $DRIFT_SDK_VERSION and $COMPETITIONS_SDK_VERSION"
           git push
