--- a/programs/drift_vaults/Cargo.toml
+++ b/programs/drift_vaults/Cargo.toml
@@ -16,7 +16,7 @@ default = []
 [dependencies]
 anchor-lang = "0.29.0"
 anchor-spl = "0.29.0"
-drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "e7516b", features = ["cpi", "mainnet-beta"], default-features = false}
+drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "a95009", features = ["cpi", "mainnet-beta"], default-features = false}
 drift-competitions = { git = "https://github.com/drift-labs/drift-competitions.git", rev = "4754f5", features = ["cpi"]}
 bytemuck = { version = "1.4.0" }
 static_assertions = "1.1.0"
