--- a/programs/drift_vaults/Cargo.toml
+++ b/programs/drift_vaults/Cargo.toml
@@ -15,7 +15,7 @@ default = []
 
 [dependencies]
 anchor-lang = "0.29.0"
-anchor-spl = "0.29.0"
+anchor-spl = { version = "0.29.0", features = ["metadata"] }
 drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "v2.85.1", features = ["cpi", "mainnet-beta"], default-features = false}
 drift-competitions = { git = "https://github.com/drift-labs/drift-competitions.git", rev = "122523", features = ["cpi"]}
 bytemuck = { version = "1.4.0" }
