fix gh actions with anchor 0.29.0

--- a/programs/drift_vaults/Cargo.toml
+++ b/programs/drift_vaults/Cargo.toml
@@ -21,3 +21,4 @@ drift-competitions = { git = "https://github.com/drift-labs/drift-competitions.g
 bytemuck = { version = "1.4.0" }
 static_assertions = "1.1.0"
 drift-macros = { git = "https://github.com/drift-labs/drift-macros.git", rev = "c57d87" }
+ahash = "=0.8.6"
