--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -7,8 +7,8 @@
     "lib": "lib"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.26.0",
-    "@drift-labs/competitions-sdk": "0.2.325",
+    "@coral-xyz/anchor": "0.28.0",
+    "@drift-labs/competitions-sdk": "0.2.330",
     "@drift-labs/sdk": "2.84.0-beta.2",
     "@solana/web3.js": "1.73.2",
     "commander": "^11.0.0",
