--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     },
     "engines": {
         "node": ">=16"
+    },
+    "dependencies": {
+        "@metaplex-foundation/js": "^0.20.1"
     }
 }
