--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -10,6 +10,7 @@
     "@coral-xyz/anchor": "0.28.0",
     "@drift-labs/competitions-sdk": "0.2.386",
     "@drift-labs/sdk": "2.92.0-beta.0",
+    "@metaplex-foundation/js": "^0.20.1",
     "@solana/web3.js": "1.92.3",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
