--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "anchor-tests": "yarn update-types && yarn update-idl && yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
     },
     "devDependencies": {
-        "@coral-xyz/anchor": "^0.29.0",
-        "@drift-labs/competitions-sdk": "0.2.330",
-        "@drift-labs/sdk": "2.84.0-beta.2",
+        "@coral-xyz/anchor": "0.28.0",
+        "@drift-labs/competitions-sdk": "0.2.333",
+        "@drift-labs/sdk": "2.84.0-beta.5",
         "@solana/web3.js": "1.73.2",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
