--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -10,11 +10,12 @@
     "@coral-xyz/anchor": "0.28.0",
     "@drift-labs/competitions-sdk": "0.2.334",
     "@drift-labs/sdk": "2.86.0-beta.14",
-    "@solana/web3.js": "1.73.2",
+    "@solana/web3.js": "1.92.3",
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
     "strict-event-emitter-types": "^2.0.0",
     "ts-node": "^10.9.1",
+    "rpc-websockets": "7.5.1",
     "typescript": "^5.1.6"
   },
   "engines": {
