--- a/ts/sdk/project.json
+++ b/ts/sdk/project.json
@@ -1,14 +1,15 @@
 {
-  "name": "vaults-sdk",
-  "targets": {
-    "build": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "bun install && bun run build && bun link",
-        "cwd": "drift-vaults/ts/sdk"
-      },
-      
-      "outputs": ["dist"]
-    }
-  }
+	"name": "vaults-sdk",
+	"targets": {
+		"build": {
+			"executor": "nx:run-commands",
+			"options": {
+				"command": "bun install && bun run build && bun link",
+				"cwd": "drift-vaults/ts/sdk"
+			},
+			"outputs": [
+				"{workspaceRoot}/dist"
+			]
+		}
+	}
 }
