--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -138,7 +138,7 @@ jobs:
 
       - name: Install Solana Verify
         run: |
-          cargo install solana-verify
+          cargo install --locked --version 0.2.11 solana-verify
           solana-verify --version
 
       - name: Verifiable Build
