--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,6 +3,8 @@ seeds = false
 skip-lint = false
 [programs.localnet]
 drift_vaults = "vAuLTsyrvSfZRuRB3XgvkPwNGgYSs9YRYymVebLKoxR"
+pyth = "FsJ3A3u2vn5cTVofAjvy6y5kwABJAqYWpe4975bi2epH"
+
 
 [registry]
 url = "https://api.apr.dev"
