--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "update-idl": "cp target/idl/drift_vaults.json ts/sdk/src/idl/drift_vaults.json",
         "update-pyth": "cp deps/pyth.json target/idl/pyth.json",
         "update-drift": "cp deps/drift.json target/idl/drift.json",
-        "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+        "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts"
     },
     "devDependencies": {
         "@coral-xyz/anchor": "0.28.0",
