feat: Vault Protocol (#50)
* fork for protocol fee

* bring over VaultProtocol

* bring over protocol changes

* format

* TS types integrated, now fix tests

* cache changes before messing around

* rust tests passing and fmt

* legacy ts tests passing

* cache changes before switching to Account

* init vault protoocl still broken, cache changes

* init vault with vault protocol test

* cleanup unused code

* init protocol vault working

* cleanup init vault ix

* add version to VaultProtocol

* fixed test

* tests passing! done for tonight

* init vault depositor test

* vault deposit test

* increase sol perp price test

* abtract beforeAll code

* place and make working

* add vault protocol validation in ixs

* trade working, now fix vault user bug

* delegated vualt trades working

* cache changes to remember what worked

* cache changes to figure out why settle pnl broken

* price change must be >= $1 to work

* settle pnl works with small price change <= 0.1%. todo make vault the maker to profit fee

* settle pnl by settling loser to then settle winner

* cache changes

* everything but withdraw working

* withdraw works without trading and vp...

* withdraw works with price increase as well

* everything works... without vp

* tests working with vp

* withdraw all deposits and profit

* protocol withdraw ixs need protocol as signer

* prepare withdraw protocol test

* everything working but protocol withdraw

* protocol withdraw profit share working!

* protocol withdraw profit share working!

* remove unneeded logs

* resolve git hooks

* merge test files due to init conflicts

* revert Cargo.lock back to master (no change should occur)

* revert yarn.lock

* use lock files from origin/master

* pass git hooks

* bump to typescript >5 to fix const generics in tsc command

* add vp to rem accts for ix

* remove static mock keypair in tests

* revert test

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,8 +1,11 @@
 [features]
 seeds = false
 skip-lint = false
+
 [programs.localnet]
 drift_vaults = "vAuLTsyrvSfZRuRB3XgvkPwNGgYSs9YRYymVebLKoxR"
+drift = "dRiftyHA39MWEi3m9aunc5MzRF1JYuBsbn6VPcn33UH"
+pyth = "FsJ3A3u2vn5cTVofAjvy6y5kwABJAqYWpe4975bi2epH"
 
 [registry]
 url = "https://api.apr.dev"
@@ -18,6 +21,10 @@ program = "./deps/drift.so"
 [[test.genesis]]
 address = "DraWMeQX9LfzQQSYoeBwHAgM5JcqFkgrX7GbTfjzVMVL"
 program = "./deps/drift_competitions.so"
+
+[[test.genesis]]
+address = "FsJ3A3u2vn5cTVofAjvy6y5kwABJAqYWpe4975bi2epH"
+program = "./deps/pyth.so"
 
 [scripts]
 test = "yarn anchor-tests"
