--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
         "prepare": "husky install",
         "update-types": "cp target/types/drift_vaults.ts ts/sdk/src/types/drift_vaults.ts && prettier --write ts/sdk/src/types/drift_vaults.ts",
         "update-idl": "cp target/idl/drift_vaults.json ts/sdk/src/idl/drift_vaults.json",
-        "update-pyth": "cp deps/pyth.json target/idl/pyth.json",
-        "update-drift": "cp deps/drift.json target/idl/drift.json",
-        "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts"
+        "anchor-tests": "yarn update-types && yarn update-idl && yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
     },
     "devDependencies": {
         "@coral-xyz/anchor": "0.28.0",
@@ -30,7 +28,7 @@
         "mocha": "^9.0.3",
         "prettier": "^2.6.2",
         "ts-mocha": "^10.0.0",
-        "typescript": "^5"
+        "typescript": "^4.5.4"
     },
     "engines": {
         "node": ">=16"
