--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -18,6 +18,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
+  "devDependencies": {
+    "@types/bn.js": "5.1.3"
+  },
   "engines": {
     "node": ">=16"
   },
@@ -25,5 +28,8 @@
     "cli": "ts-node cli/cli.ts",
     "clean": "rm -rf lib",
     "build": "yarn clean && tsc"
+  },
+  "resolutions": {
+    "@types/bn.js": "5.1.3"
   }
 }
