--- a/.github/workflows/on-sdk-update.yml
+++ b/.github/workflows/on-sdk-update.yml
@@ -93,7 +93,7 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/repos/drift-labs/internal-keeper-bot/dispatches" \
             -d "{\"event_type\": \"jit-sdk-update\", \"client_payload\": {
-              \"sdk-version\": \"$SDK_VERSION\",
+              \"sdk-version\": \"$DRIFT_SDK_VERSION\",
               \"vault-version\": \"$VAULT_VERSION\"
             }}"
         env:
