--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "update-drift": "cp deps/drift.json target/idl/drift.json",
         "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts",
         "anchor-tests:vaults": "yarn anchor-tests -g TestDriftVaults",
-        "anchor-tests:tokenize": "yarn anchor-tests -g TestTokenizedDriftVaults",
-        "anchor-tests:protocol": "yarn anchor-tests -g TestProtocolVaults"
+        "anchor-tests:protocol": "yarn anchor-tests -g TestProtocolVaults",
+        "anchor-tests:tokenize": "yarn anchor-tests -g TestTokenizedDriftVaults"
     },
     "devDependencies": {
         "@coral-xyz/anchor": "0.28.0",
