--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,6 +142,7 @@ jobs:
           solana-verify --version
 
       - name: Verifiable Build
+        continue-on-error: true
         run: |
           solana-verify build --library-name drift_vaults --base-image ellipsislabs/solana:1.16.6
 
