--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,9 +142,9 @@ jobs:
           solana-verify --version
 
       - name: Verifiable Build
-        continue-on-error: true
+        shell: bash +e {0}
         run: |
-          solana-verify build --library-name drift_vaults --base-image ellipsislabs/solana:1.16.6 2>&1 | tail -n 1
+          solana-verify build --library-name drift_vaults --base-image ellipsislabs/solana:1.16.6
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
