--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,9 +143,11 @@ jobs:
 
       - name: Verifiable Build
         shell: bash {0}
+        env:
+          CARGO_NET_OFFLINE: false
+          CARGO_FROZEN: false
         run: |
           solana-verify build --library-name drift_vaults --base-image ellipsislabs/solana:1.16.6
-          sleep 5
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
