--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,10 +142,13 @@ jobs:
           solana-verify --version
 
       - name: Verifiable Build
-        shell: bash {0}
-        env:
-          DOCKER_FLAGS: "--network=host"
         run: |
+          cargo vendor
+          mkdir -p .cargo
+          echo '[source.crates-io]' > .cargo/config.toml
+          echo 'replace-with = "vendored-sources"' >> .cargo/config.toml
+          echo '[source.vendored-sources]' >> .cargo/config.toml
+          echo 'directory = "vendor"' >> .cargo/config.toml
           solana-verify build --library-name drift_vaults --base-image ellipsislabs/solana:1.16.6
 
       - name: Upload Artifact
