chore: removes competition (#56)
* remove drift-competitions

* update main.yml

* fix linter

* remove default-features=false

* add continue-on-error

* cargo fetch before solana-verify

* cargo vendor before solana-verify

* try to parse last line of build output

* override shell command to keep errors

* kcikoff build

* use raw bash

* try another shell cmd

* update shell

* disable cargo frozen

* add DOCKER_FLAGS to solana-verify build

* use cargo vendor

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: main
 
 on:
   push:
-    branches: master
+    branches: [master]
   pull_request:
-    branches: master
+    branches: [master]
 
 defaults:
   run:
@@ -143,6 +143,12 @@ jobs:
 
       - name: Verifiable Build
         run: |
+          cargo vendor
+          mkdir -p .cargo
+          echo '[source.crates-io]' > .cargo/config.toml
+          echo 'replace-with = "vendored-sources"' >> .cargo/config.toml
+          echo '[source.vendored-sources]' >> .cargo/config.toml
+          echo 'directory = "vendor"' >> .cargo/config.toml
           solana-verify build --library-name drift_vaults --base-image ellipsislabs/solana:1.16.6
 
       - name: Upload Artifact
