--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: main
 
 on:
   push:
-    branches: master
+    branches: [master]
   pull_request:
-    branches: master
+    branches: [master]
 
 defaults:
   run:
@@ -34,7 +34,7 @@ jobs:
       - name: Cargo fmt
         run: cargo fmt -- --check
       - name: Cargo clippy
-        run: cargo clippy -p drift
+        run: cargo clippy -p drift-vaults
   unit:
     name: Unit tests
     runs-on: ubicloud
@@ -138,11 +138,17 @@ jobs:
 
       - name: Install Solana Verify
         run: |
-          cargo install solana-verify
+          cargo install --locked --version 0.2.11 solana-verify
           solana-verify --version
 
       - name: Verifiable Build
         run: |
+          cargo vendor
+          mkdir -p .cargo
+          echo '[source.crates-io]' > .cargo/config.toml
+          echo 'replace-with = "vendored-sources"' >> .cargo/config.toml
+          echo '[source.vendored-sources]' >> .cargo/config.toml
+          echo 'directory = "vendor"' >> .cargo/config.toml
           solana-verify build --library-name drift_vaults --base-image ellipsislabs/solana:1.16.6
 
       - name: Upload Artifact
