--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "0.28.0",
     "@drift-labs/sdk": "2.98.0-beta.9",
+    "@metaplex-foundation/js": "^0.20.1",
     "@ledgerhq/hw-app-solana": "^7.1.1",
     "@ledgerhq/hw-transport": "^6.30.1",
     "@ledgerhq/hw-transport-node-hid": "^6.28.1",
