--- a/ts/sdk/package.json
+++ b/ts/sdk/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "@drift-labs/vaults-sdk",
-  "version": "0.2.4",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "directories": {
-    "lib": "lib"
-  },
-  "dependencies": {
-    "@coral-xyz/anchor": "0.28.0",
-    "@drift-labs/sdk": "2.104.0-beta.10",
-    "@ledgerhq/hw-app-solana": "^7.1.1",
-    "@ledgerhq/hw-transport": "^6.30.1",
-    "@ledgerhq/hw-transport-node-hid": "^6.28.1",
-    "@metaplex-foundation/js": "^0.20.1",
-    "@solana/wallet-adapter-ledger": "^0.9.25",
-    "@solana/web3.js": "1.92.3",
-    "commander": "^11.0.0",
-    "dotenv": "^16.3.1",
-    "rpc-websockets": "7.5.1",
-    "strict-event-emitter-types": "^2.0.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  },
-  "devDependencies": {
-    "@types/bn.js": "5.1.3"
-  },
-  "engines": {
-    "node": ">=16"
-  },
-  "scripts": {
-    "cli": "ts-node cli/cli.ts",
-    "clean": "rm -rf lib",
-    "build": "yarn clean && tsc"
-  },
-  "resolutions": {
-    "@types/bn.js": "5.1.3"
-  }
+	"name": "@drift-labs/vaults-sdk",
+	"version": "0.2.4",
+	"main": "lib/index.js",
+	"types": "lib/index.d.ts",
+	"directories": {
+		"lib": "lib"
+	},
+	"dependencies": {
+		"@coral-xyz/anchor": "0.28.0",
+		"@drift-labs/sdk": "2.104.0-beta.10",
+		"@ledgerhq/hw-app-solana": "7.2.4",
+		"@ledgerhq/hw-transport": "6.31.4",
+		"@ledgerhq/hw-transport-node-hid": "6.29.5",
+		"@metaplex-foundation/js": "0.20.1",
+		"@solana/wallet-adapter-ledger": "0.9.25",
+		"@solana/web3.js": "1.92.3",
+		"commander": "11.1.0",
+		"dotenv": "16.4.5",
+		"rpc-websockets": "7.5.1",
+		"strict-event-emitter-types": "2.0.0",
+		"ts-node": "10.9.2",
+		"typescript": "5.6.3"
+	},
+	"devDependencies": {
+		"@types/bn.js": "5.1.3"
+	},
+	"engines": {
+		"node": ">=16"
+	},
+	"scripts": {
+		"cli": "ts-node cli/cli.ts",
+		"clean": "rm -rf lib",
+		"build": "yarn clean && tsc"
+	},
+	"resolutions": {
+		"@types/bn.js": "5.1.3"
+	}
 }
