--- a/programs/drift_vaults/Cargo.toml
+++ b/programs/drift_vaults/Cargo.toml
@@ -21,3 +21,6 @@ bytemuck = { version = "1.4.0" }
 static_assertions = "1.1.0"
 drift-macros = { git = "https://github.com/drift-labs/drift-macros.git", rev = "c57d87" }
 ahash = "=0.8.6"
+
+[dev-dependencies]
+base64 = "0.13.0"
