--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "anchor-tests:protocol": "yarn anchor-tests -g TestProtocolVaults",
         "anchor-tests:tokenize": "yarn anchor-tests -g TestTokenizedDriftVaults",
         "anchor-tests:if-stake": "yarn anchor-tests -g TestInsuranceFundStake",
-        "anchor-tests:sol-denom-vault": "yarn anchor-tests -g TestSOLDenomindatedVault"
+        "anchor-tests:sol-denom-vault": "yarn anchor-tests -g TestSOLDenomindatedVault",
+        "anchor-tests:neg-mgmt-fee": "yarn anchor-tests -g TestNegativeManagementFee"
     },
     "devDependencies": {
         "@coral-xyz/anchor": "0.28.0",
