--- a/programs/drift_vaults/Cargo.toml
+++ b/programs/drift_vaults/Cargo.toml
@@ -16,7 +16,7 @@ default = []
 [dependencies]
 anchor-lang = "0.29.0"
 anchor-spl = { version = "0.29.0", features = ["metadata"] }
-drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "b61bbe403cf526d75e71d673b3120598eab3131c", features = ["cpi", "mainnet-beta"] }
+drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "v2.109.0", features = ["cpi", "mainnet-beta"] }
 bytemuck = { version = "1.4.0" }
 static_assertions = "1.1.0"
 drift-macros = { git = "https://github.com/drift-labs/drift-macros.git", rev = "c57d87" }
