migrate mocha to jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "compilerOptions": {
-    "types": [
-      "mocha",
-      "chai"
-    ],
+    "types": [],
     "typeRoots": [
       "./node_modules/@types"
     ],
