--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
         "update-idl": "cp target/idl/drift_vaults.json ts/sdk/src/idl/drift_vaults.json",
         "update-pyth": "cp deps/pyth.json target/idl/pyth.json",
         "update-drift": "cp deps/drift.json target/idl/drift.json",
-        "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run ts-mocha -p ./tsconfig.json -t 1000000 --exit tests/**/*.ts",
+        "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run jest --forceExit",
         "anchor-tests:vaults": "yarn anchor-tests -g TestDriftVaults",
         "anchor-tests:protocol": "yarn anchor-tests -g TestProtocolVaults",
         "anchor-tests:tokenize": "yarn anchor-tests -g TestTokenizedDriftVaults",
         "anchor-tests:if-stake": "yarn anchor-tests -g TestInsuranceFundStake",
         "anchor-tests:sol-denom-vault": "yarn anchor-tests -g TestSOLDenomindatedVault",
-        "anchor-tests:withdraw": "yarn anchor-tests -g TestWithdrawFromVaults",
-        "anchor-tests:fuel-dist": "yarn anchor-tests -g TestFuelDistribution"
+        "anchor-tests:withdraw": "yarn anchor-tests -g TestWithdrawFromVaults"
     },
     "devDependencies": {
-        "@coral-xyz/anchor": "0.28.0",
+        "@coral-xyz/anchor": "0.29.0",
         "@drift-labs/sdk": "2.110.0-beta.4",
         "@solana/web3.js": "1.73.2",
         "@types/bn.js": "^5.1.0",
-        "@types/chai": "^4.3.0",
-        "@types/mocha": "^9.0.0",
+        "@types/jest": "29.5.14",
+        "@types/jest-expect-message": "1.1.0",
         "@typescript-eslint/eslint-plugin": "^4.28.0",
         "@typescript-eslint/parser": "^4.28.0",
-        "chai": "^4.3.4",
         "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
         "husky": "^8.0.0",
-        "mocha": "^9.0.3",
+        "jest": "^29.7.0",
+        "jest-expect-message": "^1.1.3",
         "prettier": "^2.6.2",
-        "ts-mocha": "^10.0.0",
-        "typescript": "^5"
+        "rpc-websockets": "7.5.1",
+        "ts-jest": "^29.2.5",
+        "ts-node": "7.0.1",
+        "typescript": "5.6.2"
     },
     "engines": {
         "node": ">=20.18.0"
