--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": [],
+    "types": ["node", "jest"],
     "typeRoots": [
       "./node_modules/@types"
     ],
