--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/jest-expect-message": "1.1.0",
         "@typescript-eslint/eslint-plugin": "^4.28.0",
         "@typescript-eslint/parser": "^4.28.0",
+        "anchor-bankrun": "0.3.0",
         "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
@@ -35,6 +36,8 @@
         "jest-expect-message": "^1.1.3",
         "prettier": "^2.6.2",
         "rpc-websockets": "7.5.1",
+        "solana-bankrun": "0.3.0",
+        "spl-token-bankrun": "^0.2.6",
         "ts-jest": "^29.2.5",
         "ts-node": "7.0.1",
         "typescript": "5.6.2"
