--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     ],
     "module": "commonjs",
     "target": "es6",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "files": ["node_modules/jest-expect-message/types/index.d.ts"]
 }
