--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "prepare": "husky install",
         "update-types": "cp target/types/drift_vaults.ts ts/sdk/src/types/drift_vaults.ts && prettier --write ts/sdk/src/types/drift_vaults.ts",
         "update-idl": "cp target/idl/drift_vaults.json ts/sdk/src/idl/drift_vaults.json",
-        "update-pyth": "cp deps/pyth.json target/idl/pyth.json",
-        "update-drift": "cp deps/drift.json target/idl/drift.json",
+        "update-pyth": "cp tests/fixtures/pyth.json target/idl/pyth.json",
+        "update-drift": "cp tests/fixtures/drift.json target/idl/drift.json",
         "anchor-tests": "yarn update-types && yarn update-idl && yarn update-drift && yarn update-pyth && yarn update-drift && yarn update-pyth && yarn run jest --forceExit",
         "anchor-tests:vaults": "yarn anchor-tests -g TestDriftVaults",
         "anchor-tests:protocol": "yarn anchor-tests -g TestProtocolVaults",
